2011-01-09 dab <david.astgtciv@gmail.com>
	* .:Added dab_filltree test
	  -- This isn't a great test, but it does better than many of the original
	  Diehard tests, and it acts as an introduction to dab_filltree2, which
	  does better.

2011-01-09 dab <david.astgtciv@gmail.com>
	* .:Added dab_monobit2 test
	* libdieharder/chisq.c:Modified chisq_binomial to use GSL's binomial function
	  -- Fixed an error with prob.c's binomial function

2011-01-09 dab <david.astgtciv@gmail.com>
	* Fixed output.c to be two-tailed again.
	* Matching fix to run_test.c to use a two-tailed test.

2011-01-07  Dirk Eddelbuettel  <edd@debian.org>

	* autotoolsRerunMeIfTroubles.sh: Needed to reset autotools on Ubuntu
	10.10

2008-08-18 19:50  rgb

	* .: This might be ready for a production snapshot, or a testing
	  snapshot,
	  or something like that. At any rate, I have BOTH fixed the
	  generator
	  problem (where rngs have numbers that can change as new
	  generators
	  are added. I fixed this by significantly increasing the size of
	  the
	  types[] vector and working moderately hard to pack it with
	  generators
	  sparsely and sanely -- sparse so there is plenty of room, sane
	  because
	  the space is now blocked out by general category with room to
	  grown.
	  
	  This will NOT GUARANTEE that the GSL will not change its internal
	  order,
	  and dieharder will continue to follow the GSL order where they
	  overlap
	  as nothing else makes sense.
	  
	  I >>also<< think I've fixed -r 5, rgb_permutations. This is a
	  non-overlapping permutations test and runs to more or less
	  arbitrary
	  order (and seems to work quite nicely where it runs, although it
	  gets
	  quite slow when we get to very large permutations as one might
	  expect).
	  
	  I think it is time to bump the minor-minor number to 11 and post
	  it, for
	  the time being with -r 5 still marked out as experimental in the
	  help listing.

2008-08-18 18:33  rgb
